<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <EditText
        android:id="@+id/edittext_name"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="12dp"
        android:hint="@string/hint_name"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.3" />

    <Button
        android:id="@+id/button_done"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button_done"
        app:layout_constraintEnd_toEndOf="@+id/edittext_name"
        app:layout_constraintStart_toStartOf="@+id/edittext_name"
        app:layout_constraintTop_toBottomOf="@+id/edittext_name" />

    <TextView
        android:id="@+id/textview_greeting"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        app:layout_constraintEnd_toEndOf="@+id/edittext_name"
        app:layout_constraintStart_toStartOf="@+id/edittext_name"
        app:layout_constraintTop_toBottomOf="@+id/button_done" />

</androidx.constraintlayout.widget.ConstraintLayout>