<resources>
    <string name="app_name">Testing</string>
    <string name="button_done">Done</string>
    <string name="hint_name">Name</string>
    <string name="greeting_message">Hello, %s!</string>
</resources>